// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildManifestProfile() builds a package manifest for a single profile version 1`] = `
Object {
  "dependencies": Object {
    "@react-native-async-storage/async-storage": "^1.15.8",
    "@react-native-clipboard/clipboard": "^1.8.3",
    "@react-native-community/checkbox": "^0.5.8",
    "@react-native-community/datetimepicker": "^3.4.6",
    "@react-native-community/hooks": "^2.6.0",
    "@react-native-community/netinfo": "^6.0.2",
    "@react-native-masked-view/masked-view": "^0.2.4",
    "@react-navigation/native": "^5.9.8",
    "@react-navigation/stack": "^5.14.9",
    "hermes-engine": "~0.7.0",
    "jest": "^26.5.2",
    "metro": "^0.64.0",
    "metro-config": "^0.64.0",
    "metro-core": "^0.64.0",
    "metro-react-native-babel-preset": "^0.64.0",
    "metro-react-native-babel-transformer": "^0.64.0",
    "metro-resolver": "^0.64.0",
    "metro-runtime": "^0.64.0",
    "react": "17.0.1",
    "react-dom": "17.0.1",
    "react-native": "^0.64.2",
    "react-native-base64": "^0.2.1",
    "react-native-floating-action": "^1.21.0",
    "react-native-fs": "^2.17.0",
    "react-native-gesture-handler": "^1.10.3",
    "react-native-lazy-index": "^2.1.1",
    "react-native-macos": "^0.64.0",
    "react-native-modal": "^11.10.0",
    "react-native-popover-view": "^4.0.3",
    "react-native-reanimated": "^2.1.0",
    "react-native-render-html": "^5.1.1",
    "react-native-safe-area-context": "^3.2.0",
    "react-native-screens": "^3.1.1",
    "react-native-shimmer": "^0.5.0",
    "react-native-sqlite-storage": "^5.0.0",
    "react-native-svg": "^12.1.1",
    "react-native-test-app": "^0.11.4",
    "react-native-webview": "^11.4.2",
    "react-native-windows": "^0.64.0",
    "react-test-renderer": "17.0.1",
  },
  "devDependencies": Object {
    "@react-native-async-storage/async-storage": "^1.15.8",
    "@react-native-clipboard/clipboard": "^1.8.3",
    "@react-native-community/checkbox": "^0.5.8",
    "@react-native-community/datetimepicker": "^3.4.6",
    "@react-native-community/hooks": "^2.6.0",
    "@react-native-community/netinfo": "^6.0.2",
    "@react-native-masked-view/masked-view": "^0.2.4",
    "@react-navigation/native": "^5.9.8",
    "@react-navigation/stack": "^5.14.9",
    "hermes-engine": "~0.7.0",
    "jest": "^26.5.2",
    "metro": "^0.64.0",
    "metro-config": "^0.64.0",
    "metro-core": "^0.64.0",
    "metro-react-native-babel-preset": "^0.64.0",
    "metro-react-native-babel-transformer": "^0.64.0",
    "metro-resolver": "^0.64.0",
    "metro-runtime": "^0.64.0",
    "react": "17.0.1",
    "react-dom": "17.0.1",
    "react-native": "^0.64.2",
    "react-native-base64": "^0.2.1",
    "react-native-floating-action": "^1.21.0",
    "react-native-fs": "^2.17.0",
    "react-native-gesture-handler": "^1.10.3",
    "react-native-lazy-index": "^2.1.1",
    "react-native-macos": "^0.64.0",
    "react-native-modal": "^11.10.0",
    "react-native-popover-view": "^4.0.3",
    "react-native-reanimated": "^2.1.0",
    "react-native-render-html": "^5.1.1",
    "react-native-safe-area-context": "^3.2.0",
    "react-native-screens": "^3.1.1",
    "react-native-shimmer": "^0.5.0",
    "react-native-sqlite-storage": "^5.0.0",
    "react-native-svg": "^12.1.1",
    "react-native-test-app": "^0.11.4",
    "react-native-webview": "^11.4.2",
    "react-native-windows": "^0.64.0",
    "react-test-renderer": "17.0.1",
  },
  "name": "@rnx-kit/align-deps",
  "peerDependencies": Object {
    "@react-native-async-storage/async-storage": "^1.15.8",
    "@react-native-clipboard/clipboard": "^1.8.3",
    "@react-native-community/checkbox": "^0.5.8",
    "@react-native-community/datetimepicker": "^3.4.6",
    "@react-native-community/hooks": "^2.6.0",
    "@react-native-community/netinfo": "^6.0.2",
    "@react-native-masked-view/masked-view": "^0.2.4",
    "@react-navigation/native": "^5.9.8",
    "@react-navigation/stack": "^5.14.9",
    "hermes-engine": "~0.7.0",
    "react": "17.0.1",
    "react-dom": "17.0.1",
    "react-native": "^0.64.2",
    "react-native-base64": "^0.2.1",
    "react-native-floating-action": "^1.21.0",
    "react-native-fs": "^2.17.0",
    "react-native-gesture-handler": "^1.10.3",
    "react-native-lazy-index": "^2.1.1",
    "react-native-macos": "^0.64.0",
    "react-native-modal": "^11.10.0",
    "react-native-popover-view": "^4.0.3",
    "react-native-reanimated": "^2.1.0",
    "react-native-render-html": "^5.1.1",
    "react-native-safe-area-context": "^3.2.0",
    "react-native-screens": "^3.1.1",
    "react-native-shimmer": "^0.5.0",
    "react-native-sqlite-storage": "^5.0.0",
    "react-native-svg": "^12.1.1",
    "react-native-webview": "^11.4.2",
    "react-native-windows": "^0.64.0",
  },
  "version": "1.0.0-test",
}
`;

exports[`buildManifestProfile() builds a package manifest for multiple profile versions 1`] = `
Object {
  "dependencies": Object {
    "@react-native-async-storage/async-storage": "^1.15.8",
    "@react-native-clipboard/clipboard": "^1.8.3",
    "@react-native-community/checkbox": "^0.5.8",
    "@react-native-community/datetimepicker": "^3.4.6",
    "@react-native-community/hooks": "^2.6.0",
    "@react-native-community/netinfo": "^6.0.2",
    "@react-native-masked-view/masked-view": "^0.2.4",
    "@react-navigation/native": "^5.9.8",
    "@react-navigation/stack": "^5.14.9",
    "hermes-engine": "~0.7.0",
    "jest": "^26.5.2",
    "metro": "^0.64.0",
    "metro-config": "^0.64.0",
    "metro-core": "^0.64.0",
    "metro-react-native-babel-preset": "^0.64.0",
    "metro-react-native-babel-transformer": "^0.64.0",
    "metro-resolver": "^0.64.0",
    "metro-runtime": "^0.64.0",
    "react": "17.0.1",
    "react-dom": "17.0.1",
    "react-native": "^0.64.2",
    "react-native-base64": "^0.2.1",
    "react-native-floating-action": "^1.21.0",
    "react-native-fs": "^2.17.0",
    "react-native-gesture-handler": "^1.10.3",
    "react-native-lazy-index": "^2.1.1",
    "react-native-macos": "^0.64.0",
    "react-native-modal": "^11.10.0",
    "react-native-popover-view": "^4.0.3",
    "react-native-reanimated": "^2.1.0",
    "react-native-render-html": "^5.1.1",
    "react-native-safe-area-context": "^3.2.0",
    "react-native-screens": "^3.1.1",
    "react-native-shimmer": "^0.5.0",
    "react-native-sqlite-storage": "^5.0.0",
    "react-native-svg": "^12.1.1",
    "react-native-test-app": "^0.11.4",
    "react-native-webview": "^11.4.2",
    "react-native-windows": "^0.64.0",
    "react-test-renderer": "17.0.1",
  },
  "devDependencies": Object {
    "@react-native-async-storage/async-storage": "^1.15.8",
    "@react-native-clipboard/clipboard": "^1.8.3",
    "@react-native-community/checkbox": "^0.5.8",
    "@react-native-community/datetimepicker": "^3.4.6",
    "@react-native-community/hooks": "^2.6.0",
    "@react-native-community/netinfo": "^6.0.2",
    "@react-native-masked-view/masked-view": "^0.2.4",
    "@react-navigation/native": "^5.9.8",
    "@react-navigation/stack": "^5.14.9",
    "hermes-engine": "~0.7.0",
    "jest": "^26.5.2",
    "metro": "^0.64.0",
    "metro-config": "^0.64.0",
    "metro-core": "^0.64.0",
    "metro-react-native-babel-preset": "^0.64.0",
    "metro-react-native-babel-transformer": "^0.64.0",
    "metro-resolver": "^0.64.0",
    "metro-runtime": "^0.64.0",
    "react": "17.0.1",
    "react-dom": "17.0.1",
    "react-native": "^0.64.2",
    "react-native-base64": "^0.2.1",
    "react-native-floating-action": "^1.21.0",
    "react-native-fs": "^2.17.0",
    "react-native-gesture-handler": "^1.10.3",
    "react-native-lazy-index": "^2.1.1",
    "react-native-macos": "^0.64.0",
    "react-native-modal": "^11.10.0",
    "react-native-popover-view": "^4.0.3",
    "react-native-reanimated": "^2.1.0",
    "react-native-render-html": "^5.1.1",
    "react-native-safe-area-context": "^3.2.0",
    "react-native-screens": "^3.1.1",
    "react-native-shimmer": "^0.5.0",
    "react-native-sqlite-storage": "^5.0.0",
    "react-native-svg": "^12.1.1",
    "react-native-test-app": "^0.11.4",
    "react-native-webview": "^11.4.2",
    "react-native-windows": "^0.64.0",
    "react-test-renderer": "17.0.1",
  },
  "name": "@rnx-kit/align-deps",
  "peerDependencies": Object {
    "@react-native-async-storage/async-storage": "^1.15.8",
    "@react-native-clipboard/clipboard": "^1.8.3",
    "@react-native-community/async-storage": "^1.12.1",
    "@react-native-community/checkbox": "^0.5.7 || ^0.5.8",
    "@react-native-community/clipboard": "^1.5.1",
    "@react-native-community/datetimepicker": "^3.0.9 || ^3.4.6",
    "@react-native-community/hooks": "^2.6.0",
    "@react-native-community/netinfo": "^5.9.10 || ^6.0.2",
    "@react-native-masked-view/masked-view": "^0.2.4",
    "@react-navigation/native": "^5.9.4 || ^5.9.8",
    "@react-navigation/stack": "^5.14.4 || ^5.14.9",
    "hermes-engine": "~0.5.0 || ~0.7.0",
    "react": "16.13.1 || 17.0.1",
    "react-dom": "16.13.1 || 17.0.1",
    "react-native": "^0.63.2 || ^0.64.2",
    "react-native-base64": "^0.2.1",
    "react-native-floating-action": "^1.21.0",
    "react-native-fs": "^2.16.6 || ^2.17.0",
    "react-native-gesture-handler": "^1.10.3",
    "react-native-lazy-index": "^2.1.1",
    "react-native-macos": "^0.63.0 || ^0.64.0",
    "react-native-modal": "^11.5.6 || ^11.10.0",
    "react-native-popover-view": "^3.1.1 || ^4.0.3",
    "react-native-reanimated": "^1.13.3 || ^2.1.0",
    "react-native-render-html": "^5.1.0 || ^5.1.1",
    "react-native-safe-area-context": "^3.2.0",
    "react-native-screens": "^2.18.1 || ^3.1.1",
    "react-native-shimmer": "^0.5.0",
    "react-native-sqlite-storage": "^3.3.11 || ^5.0.0",
    "react-native-svg": "^12.1.1",
    "react-native-webview": "^11.4.2",
    "react-native-windows": "^0.63.0 || ^0.64.0",
  },
  "version": "1.0.0-test",
}
`;
